# spaces

./: .gitignore  Cargo.toml
life-spaces/: .gitignore  AGENTS.md  Cargo.toml  METALAYER.md  Makefile  Makefile.control  PLANS.md  README.md  skills-lock.json  spacetime.json
life-spaces/.claude/skills/: control-metalayer-loop  harness-engineering-playbook
life-spaces/.githooks/: pre-commit  pre-push.pre-entire
life-spaces/.github/workflows/: control-harness.yml  release.yml
life-spaces/docs/: ARCHITECTURE.md  OBSERVABILITY.md
life-spaces/docs/control/: ACTUATORS.md  ARCHITECTURE.md  CONTROLLER.md  CONTROL_LOOP.md  CONTROL_SYSTEM.md  FEEDBACK_LOOP.md  OBSERVABILITY.md  SENSORS.md  SETPOINTS.md  STABILITY.md
life-spaces/evals/: control-metrics.yaml
life-spaces/scripts/: audit_control.sh
life-spaces/scripts/control/: check.sh  install_hooks.sh  smoke.sh  test.sh
life-spaces/scripts/harness/: smoke.sh  test.sh
life-spaces/skills/: control-metalayer-loop  harness-engineering-playbook
life-spaces/spacetimedb/: Cargo.toml
life-spaces/spacetimedb/src/: auth.rs  lib.rs  tables.rs  types.rs  validation.rs
life-spaces/src/: main.rs
life-spaces/src/module_bindings/: add_reaction_reducer.rs  archive_thread_reducer.rs  channel_table.rs  channel_type.rs  create_channel_reducer.rs  create_server_reducer.rs  create_thread_reducer.rs  delete_channel_reducer.rs  delete_direct_message_reducer.rs  delete_message_reducer.rs  delete_server_reducer.rs  direct_conversation_table.rs  direct_conversation_type.rs  direct_message_table.rs  direct_message_type.rs  mod.rs  (+22 more)
(+55 files in other folders)
