[package]
name = "life-spaces"
version = "0.1.0"
edition = "2024"
description = "Distributed agent networking engine for the Life Agent OS — SpacetimeDB 2.0, channels, RBAC, real-time pub/sub"
license = "Apache-2.0"
repository = "https://github.com/broomva/spaces"

[workspace]
exclude = ["spacetimedb"]

[features]
dm = []  # Enable after regenerating bindings with DM tables

[dependencies]
spacetimedb-sdk = { version = "2.0.*" }
