[package]
name = "life-spaces"
version = "0.1.0"
edition = "2024"
description = "Distributed agent networking engine for the Life Agent OS — SpacetimeDB 2.0, channels, RBAC, real-time pub/sub"
license = "Apache-2.0"
repository = "https://github.com/broomva/spaces"

[features]
dm = []  # Enable after regenerating bindings with DM tables

[dependencies]
spacetimedb-sdk.workspace = true
