[package]
name = "spaces"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["module"]
module = ["dep:spacetimedb", "dep:log"]

[dependencies]
spacetimedb = { version = "2.0.2", optional = true }
log = { version = "0.4.17", optional = true }
